implementacion de Pedido

--- a/Cafeteria/src/app/login/login/login.component.html
+++ b/Cafeteria/src/app/login/login/login.component.html
@@ -3,7 +3,7 @@
         <h1>Bienvenido a Cafeteria.Go</h1>
         <p>Elige una opción para continuar</p>
         <div class="buttons">
-            <button class="order-btn">Ordenar</button>
+            <button class="order-btn" (click)="goToTables()">Ordenar</button>
             <button class="admin-btn">Administrador</button>
         </div>
     </div>
