--- a/Cafeteria/src/app/products/list-product/list-product.component.html
+++ b/Cafeteria/src/app/products/list-product/list-product.component.html
@@ -1,15 +1,14 @@
-<div>
+<div class="add-product">
   <app-create-product></app-create-product>
+  <select class="select" [(ngModel)]="selectedType">
+    <option value="">Todos</option>
+    <option value="Bebidas frías">Bebidas frías</option>
+    <option value="Bebidas Calientes">Bebidas Calientes</option>
+    <option value="Postres">Postres</option>
+    <option value="Desayuno">Desayuno</option>
+    <option value="Comida">Comida</option>
+  </select>
 </div>
-
-<select [(ngModel)]="selectedType">
-  <option value="">Todos</option>
-  <option value="Bebidas frías">Bebidas frías</option>
-  <option value="Bebidas Calientes">Bebidas Calientes</option>
-  <option value="Postres">Postres</option>
-  <option value="Desayuno">Desayuno</option>
-  <option value="Comida">Comida</option>
-</select>
 
 
 
@@ -17,16 +16,28 @@
   <div 
     *ngFor="let product of getFilteredProducts()"
     class="card"
-    [class.selected]="selectedProductIds.includes(product.IdProduct)"
-    (click)="toggleProductSelection(product)"
+    [class.selected]="selectedProductIds.includes(product.IdProducto)"
+    (click)="openProductModal(product)"
   >
     <h3>{{ product.Nombre }}</h3>
     <p>Precio: ${{ product.Precio }}</p>
   </div>
 </div>
 
-<!-- 📌 Botón para realizar pedido -->
-<button (click)="placeOrder()">Realizar Pedido</button>
+<!-- Modal para mostrar los detalles del producto -->
+<div class="modal" [class.show]="isModalOpen" (click)="closeModal()" *ngIf="isModalOpen">
+  <div class="modal-content" (click)="$event.stopPropagation()">
+    <span class="close-btn" (click)="closeModal()">&times;</span>
+    <h3>{{ selectedProduct?.Nombre }}</h3>
+    <p>Precio: ${{ selectedProduct?.Precio }}</p>
+    <p>{{ selectedProduct?.Descripcion }}</p>
+    <button (click)="addToOrder()">Añadir al Pedido</button>
+  </div>
+</div>
+
+
 <div class="selected-count">
-  Productos seleccionados: <strong>{{ selectedProductIds.length }}</strong>
+  Productos seleccionados: <strong>{{ selectedProducts.length }}</strong>
+  <button (click)="placeOrder()">Realizar Pedido</button>
+
 </div>
