--- a/Cafeteria/src/app/table/list-table/list-table.component.css
+++ b/Cafeteria/src/app/table/list-table/list-table.component.css
@@ -148,3 +148,63 @@
         height: 60px;
     }
   }
+  /* Fondo del modal (overlay) */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro */
+  display: flex;
+  justify-content: center; /* Centrar contenido horizontalmente */
+  align-items: center; /* Centrar contenido verticalmente */
+  z-index: 1000;
+}
+
+/* Modal (contenido) */
+.modal {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  width: 300px; /* Ancho fijo para el modal */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para dar profundidad */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px; /* Espacio entre el título, input y botones */
+}
+
+/* Estilo del input de texto */
+.modal input {
+  width: 100%; /* Hace que el input ocupe todo el ancho del modal */
+  padding: 10px;
+  margin-bottom: 20px; /* Espacio entre el input y los botones */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+/* Estilo de los botones */
+.modal-buttons button {
+  padding: 10px 20px;
+  margin: 5px;
+  border: none;
+  border-radius: 4px;
+  background-color: #3085d6;
+  color: white;
+  cursor: pointer;
+}
+
+.modal-buttons button:hover {
+  background-color: #2569b3; /* Cambia de color al pasar el mouse */
+}
+
+/* Estilo para el botón de cancelar */
+.modal-buttons button:first-child {
+  background-color: #d33;
+}
+
+.modal-buttons button:first-child:hover {
+  background-color: #a03f3f;
+}
