--- a/Cafeteria/src/app/table/create-table/create-table.component.html
+++ b/Cafeteria/src/app/table/create-table/create-table.component.html
@@ -1,6 +1,7 @@
 <div class="card add-table-card" (click)="createMesa()">
-    <div class="card-icon">
+  <i class='bx bxs-plus-square'></i>    <div class="card-icon">
     </div>
-    <div class="card-name">Agregar</div>
-  </div>
+    <div class="card-name">
+    </div>
+</div>
   
