--- a/Cafeteria/src/app/table/list-table/list-table.component.html
+++ b/Cafeteria/src/app/table/list-table/list-table.component.html
@@ -1,7 +1,10 @@
-<!-- src/app/components/mesa-list/mesa-list.component.html -->
 <h1>Mesas</h1>
-<div *ngIf="showModal" class="modal-overlay">
-  <div class="modal">
+<div class="create">
+  <app-create-table ></app-create-table>
+</div>
+<div class="modal-overlay" [class.show]="showModal" (click)="closeModal()" *ngIf="showModal">
+  <div class="modal-content" (click)="$event.stopPropagation()">
+    <span class="close-btn" (click)="closeModal()">&times;</span>
     <h2>Ingresa tu nombre</h2>
     <input type="text" [(ngModel)]="userName" placeholder="Tu nombre">
     <div class="modal-buttons">
@@ -13,17 +16,13 @@
 
 <div class="mesas-container">
   <div class="container">
-    <app-create-table class="card"></app-create-table>
-    <!-- Usamos ngFor para iterar sobre las mesas -->
-    <div *ngFor="let mesa of mesas" class="card" >
-      <div class="card-body" (click)="mesa.IdMesa ? openModal (mesa.IdMesa) : null">
-        <i class='bx bx-dish bx-tada'></i>
-        <div class="card-name">{{ mesa.Status }}</div>
+    <div *ngFor="let mesa of mesas" class="card">
+      <div class="card-body" (click)="mesa.IdMesa ? openModal(mesa.IdMesa) : null">
+        <i class='bx bxs-dish card-icon'></i>
       </div>
+      <div class="card-name">{{mesa.IdMesa}}</div>
+      <div class="card-name">{{ mesa.Status }}</div>
+
     </div>
-    
   </div>
 </div>
-
-<!--  -->
-<!-- (click)="mesa.IdMesa ? deleteMesa(mesa.IdMesa) : null" -->
