--- a/Cafeteria/src/app/shared/footer/footer.component.html
+++ b/Cafeteria/src/app/shared/footer/footer.component.html
@@ -1,9 +1,9 @@
 <div class="footer">
     <div class="part1">
-        <p>Para dudas contectanos al correo: suchibus&#64;gmail.com.mx.</p>
+        <p>Para dudas contectanos al correo: Cafeteria.Go&#64;gmail.com.mx.</p>
     </div>
     <div class="part2">
-        <h3>Todos los derechos reservados &#9400; SuchiBus.</h3>
+        <h3>Todos los derechos reservados &#9400; Cafeteria.Go</h3>
     </div>
     <div class="part3">
         También puedes contactarnos por el numero telefonico: +52 9612736472 de 8am a 10pm.
