--- a/Cafeteria/src/app/table/create-table/create-table.component.html
+++ b/Cafeteria/src/app/table/create-table/create-table.component.html
@@ -1,7 +1,5 @@
-<div class="card add-table-card" (click)="createMesa()">
-  <i class='bx bxs-plus-square'></i>    <div class="card-icon">
-    </div>
-    <div class="card-name">
-    </div>
+<div class="create-table-container">
+  <button class="create-table-btn" (click)="createMesa()">
+    <span class="material-symbols-outlined">add</span>
+  </button>
 </div>
-  
