--- a/Cafeteria/src/app/robots/create-robot/create-robot.component.html
+++ b/Cafeteria/src/app/robots/create-robot/create-robot.component.html
@@ -7,7 +7,7 @@
   <div *ngIf="showModal" class="modal-overlay">
     <div class="modal-container">
       <div class="modal-header">
-        <h5 class="modal-title">Registrar Producto</h5>
+        <h5 class="modal-title">Registrar Robot</h5>
         <button type="button" class="btn-close" (click)="closeModal()"></button>
       </div>
       <div class="modal-body">
@@ -27,3 +27,4 @@
     </div>
   </div>
   
+  <app-list-robot></app-list-robot>
