Corrección en adaptadores de RabbitMQsss

--- a/Cafeteria/src/app/products/list-product/list-product.component.html
+++ b/Cafeteria/src/app/products/list-product/list-product.component.html
@@ -14,14 +14,14 @@
 </div>
 
 <div class="product-list">
-  <div 
+  <div
     *ngFor="let product of getFilteredProducts()"
     class="card"
     [class.selected]="selectedProductIds.includes(product.IdProducto)"
     (click)="openProductModal(product)"
   >
-    <span class="material-symbols-outlined">{{ getProductIcon(product.Tipo) }}</span>
-    
+    <!-- <span class="material-symbols-outlined">{{ getProductIcon(product.Tipo) }}</span> -->
+
     <h3>{{ product.Nombre }}</h3>
     <p>Precio: ${{ product.Precio }}</p>
   </div>
