--- a/Cafeteria/src/app/products/list-product/list-product.component.html
+++ b/Cafeteria/src/app/products/list-product/list-product.component.html
@@ -1,43 +1,46 @@
-<div class="create-product">
-  <app-create-product></app-create-product>
-</div>
-
-<div class="add-product">
-  <select class="select" [(ngModel)]="selectedType">
-    <option value="">Todos</option>
-    <option value="Bebidas frías">Bebidas frías</option>
-    <option value="Bebidas Calientes">Bebidas Calientes</option>
-    <option value="Postres">Postres</option>
-    <option value="Desayuno">Desayuno</option>
-    <option value="Comida">Comida</option>
-  </select>
-</div>
-
-<div class="product-list">
-  <div 
-    *ngFor="let product of getFilteredProducts()"
-    class="card"
-    [class.selected]="selectedProductIds.includes(product.IdProducto)"
-    (click)="openProductModal(product)"
-  >
-    <span class="material-symbols-outlined">{{ getProductIcon(product.Tipo) }}</span>
-    
-    <h3>{{ product.Nombre }}</h3>
-    <p>Precio: ${{ product.Precio }}</p>
+<div class="container-list">
+  <div class="create-product">
+    <app-create-product></app-create-product>
   </div>
-</div>
-
-<div class="modal" [class.show]="isModalOpen" (click)="closeModal()" *ngIf="isModalOpen">
-  <div class="modal-content" (click)="$event.stopPropagation()">
-    <span class="close-btn" (click)="closeModal()">&times;</span>
-    <h3>{{ selectedProduct?.Nombre }}</h3>
-    <p>Precio: ${{ selectedProduct?.Precio }}</p>
-    <p>{{ selectedProduct?.Descripcion }}</p>
-    <button (click)="addToOrder()">Añadir al Pedido</button>
+  
+  <div class="add-product">
+    <select class="select" [(ngModel)]="selectedType">
+      <option value="">Todos</option>
+      <option value="Bebidas frías">Bebidas frías</option>
+      <option value="Bebidas calientes">Bebidas Calientes</option>
+      <option value="Postres">Postres</option>
+      <option value="Desayuno">Desayuno</option>
+      <option value="Comida">Comida</option>
+    </select>
   </div>
-</div>
-
-<div class="selected-count">
-  Productos seleccionados: <strong>{{ selectedProducts.length }}</strong>
-  <button (click)="placeOrder()">Realizar Pedido</button>
+  
+  <div class="product-list">
+    <div 
+      *ngFor="let product of getFilteredProducts()"
+      class="card"
+      [class.selected]="selectedProductIds.includes(product.IdProducto)"
+      (click)="openProductModal(product)"
+    >
+      <span class="material-symbols-outlined">{{ getProductIcon(product.Tipo) }}</span>
+      
+      <h3>{{ product.Nombre }}</h3>
+      <p>Precio: ${{ product.Precio }}</p>
+    </div>
+  </div>
+  
+  <div class="modal" [class.show]="isModalOpen" (click)="closeModal()" *ngIf="isModalOpen">
+    <div class="modal-content" (click)="$event.stopPropagation()">
+      <span class="close-btn" (click)="closeModal()">&times;</span>
+      <h3>{{ selectedProduct?.Nombre }}</h3>
+      <p>Precio: ${{ selectedProduct?.Precio }}</p>
+      <p>{{ selectedProduct?.Descripcion }}</p>
+      <button (click)="addToOrder()">Añadir al Pedido</button>
+    </div>
+  </div>
+  
+  <div class="selected-count">
+    Productos seleccionados: <strong>{{ selectedProducts.length }}</strong>
+    <button (click)="placeOrder()" class="bt-pedido">Realizar Pedido</button>
+  </div>
+  
 </div>
