--- a/Cafeteria/src/app/shared/footer/footer.component.css
+++ b/Cafeteria/src/app/shared/footer/footer.component.css
@@ -1,24 +1,46 @@
-.footer{
-    background-color: #a37632;
-    height: 100px;
-    bottom: 0;
-    margin-top: 50px;
-    justify-content:center;
-   align-items: center;
+body {
     display: flex;
-    gap:300px;
-    padding: 2vw;
+    flex-direction: column;
+    min-height: 100vh; 
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  main {
+    flex: 2;
+  }
+  
+  .footer {
+    background: #885809;
     color: white;
-}
-
-.part1{
-    width: 200px;
-    text-align: justify;
-}
-
-
-
-.part3{
-    width: 200px;
-    text-align: justify;
-}
+    text-align: center;
+    padding: 15px;
+    font-size: 14px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+  }
+  
+  /* Distribución de las partes */
+  .part1, .part2, .part3 {
+    flex: 1;
+    padding: 8px;
+  }
+  
+  /* Responsive: Ajustar en pantallas pequeñas */
+  @media (max-width: 768px) {
+    .footer {
+      flex-direction: column;
+      text-align: center;
+    }
+  
+    .part1, .part2, .part3 {
+      width: 100%;
+      padding: 5px 0;
+    }
+  }
+  
