--- a/Cafeteria/src/app/shared/navbar/navbar.component.html
+++ b/Cafeteria/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,6 @@
 <div class="navbar">
-    <i class='bx bx-arrow-back icon' ></i>
+    <i class='bx bx-arrow-back icon' (click)="goBack()" ></i>
     <div class="nav-links">
-      <i class='bx bxs-user-circle icon' ></i>
       <i class='bx bx-menu icon' ></i>
     </div>
   </div>
