--- a/Cafeteria/src/app/table/list-table/list-table.component.css
+++ b/Cafeteria/src/app/table/list-table/list-table.component.css
@@ -43,7 +43,7 @@
     color: black;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    background-color: #895217;
+    background-color: #50671e;
     border: rgba(63, 63, 63, 0.189) 0.2px solid;
     cursor: pointer;
   }
