--- a/Cafeteria/src/app/users/create-user/create-user.component.html
+++ b/Cafeteria/src/app/users/create-user/create-user.component.html
@@ -1,1 +1,154 @@
-<p>create-user works!</p>
+<a href="https://front.codes/" class="logo" target="_blank">
+  <img src="https://assets.codepen.io/1462889/fcy.png" alt="" />
+</a>
+
+<div class="section">
+  <div class="container">
+    <div class="row full-height justify-content-center">
+      <div class="col-12 text-center align-self-center py-5">
+        <div class="section pb-5 pt-5 pt-sm-2 text-center">
+          <h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
+
+          <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" />
+          <label for="reg-log"></label>
+          <div class="card-3d-wrap mx-auto">
+            <div class="card-3d-wrapper">
+              <!-- LOGIN -->
+              <div class="card-front">
+                <div class="center-wrap">
+                  <div class="section text-center">
+                    <h4 class="mb-4 pb-3">Log In</h4>
+              
+                    <form [formGroup]="UserForm" (ngSubmit)="login()">
+                      <!-- EMAIL -->
+                      <div class="form-group">
+                        <input
+                          type="email"
+                          formControlName="email"
+                          class="form-style"
+                          placeholder="Your Email"
+                          id="logemail"
+                          autocomplete="off"
+                        />
+                        <i class="input-icon uil uil-at"></i>
+                      </div>
+              
+                      <!-- PASSWORD -->
+                      <div class="form-group mt-2">
+                        <input
+                          type="password"
+                          formControlName="password"
+                          class="form-style"
+                          placeholder="Your Password"
+                          id="logpass"
+                          autocomplete="off"
+                        />
+                        <i class="input-icon uil uil-lock-alt"></i>
+                      </div>
+              
+                      <!-- SUBMIT -->
+                      <button type="submit" class="btn mt-4">Submit</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              
+              <!-- CREAR CUENTA -->
+              <div class="card-back">
+                <form [formGroup]="UserForm">
+                  <div class="center-wrap">
+                    <div class="section text-center">
+                      <h4 class="mb-4 pb-3">Sign Up</h4>
+
+                      <!-- First Name -->
+                      <div class="form-group">
+                        <input
+                          type="text"
+                          name="firstname"
+                          class="form-style"
+                          placeholder="First Name"
+                          id="signupFirstName"
+                          autocomplete="off"
+                          formControlName="name"
+                        />
+                        <i class="input-icon uil uil-user"></i>
+                      </div>
+
+                      <!-- Last Name -->
+                      <div class="form-group mt-2">
+                        <input
+                          type="text"
+                          name="lastname"
+                          class="form-style"
+                          placeholder="Last Name"
+                          id="signupLastName"
+                          autocomplete="off"
+                          formControlName="last_name"
+                        />
+                        <i class="input-icon uil uil-user"></i>
+                      </div>
+
+                      <!-- User Type -->
+                      <div class="form-group mt-2">
+                        <select
+                          name="usertype"
+                          class="form-style"
+                          id="signupUserType"
+                          formControlName="user_type"
+                        >
+                          <option value="" disabled selected>
+                            Select user type
+                          </option>
+                          <option
+                            value="designer"
+                            *ngFor="let tipo of tipos"
+                            [value]="tipo"
+                          >
+                            {{ tipo }}
+                          </option>
+                        </select>
+                        <i class="input-icon uil uil-user"></i>
+                      </div>
+
+                      <!-- Email -->
+                      <div class="form-group mt-2">
+                        <input
+                          type="email"
+                          name="email"
+                          class="form-style"
+                          placeholder="Your Email"
+                          id="signupEmail"
+                          autocomplete="off"
+                          formControlName="email"
+                        />
+                        <i class="input-icon uil uil-at"></i>
+                      </div>
+
+                      <!-- Password -->
+                      <div class="form-group mt-2">
+                        <input
+                          type="password"
+                          name="password"
+                          class="form-style"
+                          placeholder="Your Password"
+                          id="signupPassword"
+                          autocomplete="off"
+                          formControlName="password"
+                        />
+                        <i class="input-icon uil uil-lock-alt"></i>
+                      </div>
+                      <!-- Submit -->
+                      <button class="btn mt-4" (click)="addUser()">
+                        Agregar
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
