--- a/Cafeteria/src/app/products/list-product/list-product.component.html
+++ b/Cafeteria/src/app/products/list-product/list-product.component.html
@@ -1,4 +1,4 @@
-
+<app-create-product></app-create-product>
   <div class="add-product">
     <select class="select" [(ngModel)]="selectedType">
       <option value="">Todos</option>
@@ -13,7 +13,7 @@
   <div class="product-list">
     <div
       *ngFor="let product of getFilteredProducts()"
-      class="card"
+      class="card"    
       [class.selected]="selectedProductIds.includes(product.IdProducto)"
       (click)="openProductModal(product)"
     >
