--- a/Cafeteria/src/app/products/list-product/list-product.component.html
+++ b/Cafeteria/src/app/products/list-product/list-product.component.html
@@ -1,7 +1,11 @@
 <div class="container-list">
-  <div class="create-product">
+  <div class="create-product" *ngIf="isAuthorizedUser()">
     <app-create-product></app-create-product>
   </div>
+    <div>
+    <app-end-table></app-end-table>
+    </div>
+  
   
   <div class="add-product">
     <select class="select" [(ngModel)]="selectedType">
