--- a/Cafeteria/src/app/table/create-table/create-table.component.css
+++ b/Cafeteria/src/app/table/create-table/create-table.component.css
@@ -8,11 +8,11 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  background-color: #35851f;
+  background-color: #ced11d;
+  border: none;
   color: white;
   font-weight: bold;
   padding: 1em 3em;
-  border: none;
   border-radius: 8px;
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -20,7 +20,7 @@
 }
 
 .create-table-btn:hover {
-  background-color: #4cd653;
+  background-color: #efed7f;
 }
 
 .material-symbols-outlined {
