--- a/Cafeteria/src/app/login/register/register.component.css
+++ b/Cafeteria/src/app/login/register/register.component.css
@@ -21,5 +21,13 @@
     font-weight: bold;
     padding: 10px;
     border-radius: 5px;
-    transition: all 0.3s ease-in-out
+    transition: all 0.3s ease-in-out;
+    background-color:#ced11d;
+    color: white;
+    border: none;
+}
+.text-center{
+    background-color:#ffffff ;
+    color:#ced11d;
+    border: none;
 }
