--- a/Cafeteria/src/app/login/register/register.component.html
+++ b/Cafeteria/src/app/login/register/register.component.html
@@ -2,11 +2,11 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
-          <div class="card-header bg-primary text-white text-center">
+          <div class="text-center">
             <h4>Registro de Usuario</h4>
           </div>
           <div class="card-body">
-            <form [formGroup]="registerForm" (ngSubmit)="registerUser()">
+            <form [formGroup]="UserForm" (ngSubmit)="addUser()">
               <div class="mb-3">
                 <label for="name" class="form-label">Nombre</label>
                 <input type="text" id="name" class="form-control" formControlName="name" placeholder="Ingrese su nombre">
@@ -24,7 +24,7 @@
                 <input type="password" id="password" class="form-control" formControlName="password" placeholder="Ingrese su contraseña">
               </div>
               <div class="d-grid">
-                <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Registrarse</button>
+                <button type="submit" class="btn-primary" [disabled]="UserForm.invalid">Registrarse</button>
               </div>
             </form>
           </div>
