--- a/Cafeteria/src/app/pedidos/pedido-modal/pedido-modal.component.html
+++ b/Cafeteria/src/app/pedidos/pedido-modal/pedido-modal.component.html
@@ -1,11 +1,11 @@
 <h2 mat-dialog-title>Detalles del Pedido</h2>
 
 <div mat-dialog-content *ngIf="pedido">
-  <p><strong>ID Pedido:</strong> {{ pedido.idPedido }}</p>
-  <p><strong>ID Mesa:</strong> {{ pedido.idMesa }}</p>
-  <p><strong>Cliente:</strong> {{ pedido.nombre_cliente }}</p>
-  <p><strong>Status:</strong> {{ pedido.status }}</p>
-  <p><strong>Total:</strong> ${{ pedido.total | number:'1.2-2' }}</p>
+  <p><strong>ID Pedido:</strong> {{ pedido.IdPedido }}</p>
+  <p><strong>ID Mesa:</strong> {{ pedido.IdMesa }}</p>
+  <p><strong>Cliente:</strong> {{ pedido.Nombre_cliente }}</p>
+  <p><strong>Status:</strong> {{ pedido.Status }}</p>
+  <p><strong>Total:</strong> ${{ pedido.Total | number:'1.2-2' }}</p>
 </div>
 
 <div mat-dialog-actions>
