--- a/Cafeteria/src/app/products/list-product/list-product.component.html
+++ b/Cafeteria/src/app/products/list-product/list-product.component.html
@@ -1,11 +1,10 @@
 
-<app-create-product></app-create-product>
 <div class="container-list">
   <div class="create-product" *ngIf="isAuthorizedUser()">
     <app-create-product></app-create-product>
   </div>
     <div>
-    <!-- <app-end-table></app-end-table> -->
+     <app-end-table></app-end-table>
     </div>
 
   <div class="add-product">
