--- a/Cafeteria/src/app/products/list-product/list-product.component.html
+++ b/Cafeteria/src/app/products/list-product/list-product.component.html
@@ -3,9 +3,9 @@
   <div class="create-product" *ngIf="isAuthorizedUser()">
     <app-create-product></app-create-product>
   </div>
-    <div>
+<!--     <div>
      <app-end-table></app-end-table>
-    </div>
+    </div> -->
 
   <div class="add-product">
     <select class="select" [(ngModel)]="selectedType">
