--- a/Cafeteria/src/app/pedidos/pedidos-list/pedidos-list.component.css
+++ b/Cafeteria/src/app/pedidos/pedidos-list/pedidos-list.component.css
@@ -58,3 +58,15 @@
   button {
     margin-top: 20px;
   }
+  .sensor-card {
+    background-color: #fff3cd;
+    border: 1px solid #ffeeba;
+    padding: 15px;
+    margin: 10px 0;
+    border-radius: 8px;
+    color: #856404;
+    font-weight: 500;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  }
+  
+  
